Almost fix info-panel box spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,8 +364,8 @@ nav li {
 }
 
 .project-para {
-    margin-left: 25px;
     color: #444;
+    text-align: center;
 }
 
 #about {
@@ -373,17 +373,33 @@ nav li {
 }
 
 .info-panel {
-    float: left;
-    width: 30%;
     min-height: 260px;
+    //max-width: 400px;
     font-size: large;
-    padding: 10px 30px 30px 30px;
-    margin: 15px;
     background-color: rgba(0, 0, 0, 0.02);
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.75);
+    padding: 20px;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.info-panel i {
+    color: darkgrey;
+}
+
+.info-panel-header {
+    text-align: center;
+}
+
+.info-panel .icon-text {
+    line-height: 40px;
+    font-weight: 900;
+    font-size: 30px;
+    padding: 0 20px 10px 0;
+    margin-top: 5px;    
 }
 
 #content-section {
